# idcard-generator-tauri

./: .commitlintrc.cjs  .czrc  .editorconfig  .env  .env.github-page  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .prettierrc.cjs  .release-it.cjs  CHANGE_LOG.md  LICENSE  README.md  env.d.ts  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.cjs  splashscreen.html  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  windi.config.ts
.github/workflows/: deploy_page  deploy_page.yml  release.yml  updater.yml
.tauri/: idcard-generator.key  idcard-generator.key.pub
e2e/: tsconfig.json  vue.spec.ts
scripts/: changelog.ts  types.ts  update.ts  utils.ts
src/: App.vue  element-variables.scss  main.ts  shims.d.ts
src-tauri/: .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  utils.rs
src-tauri/src/app/: event.rs  menu.rs  mod.rs  tray.rs  updater.rs  window.rs
src/assets/json/: city.json  country.json
src/components/: IdCardImage.vue
src/constant/: idcard.ts  index.ts
src/plugins/: element.ts
src/router/: index.ts
src/service/idcard/: RelationStrategy.ts
src/stores/: counter.ts
src/typings/: fprcard.d.ts  idcard.d.ts  index.d.ts
src/utils/: AssetsUtils.ts  IdCardUtils.ts  require.ts
src/views/: AboutView.vue  AboutViewer.vue  HeaderMenuViewer.vue  Home.vue  HomeView.vue  HomeViewer.vue  SettingView.vue  WikiView.vue
src/views/FprCard/: FprCardImageViewer.vue  FprCardViewer.vue
src/views/IdCard/: IdCardImageViewer.vue  IdCardViewer.vue
src/views/idcard/: image.vue  index.vue
