[package]
name = "idcard-generator"
version = "0.1.0"
description = "中国居民身份证生成器"
authors = ["ddki"]
license = ""
repository = "https://github.com/ddki/idcard-generator-tauri"
default-run = "idcard-generator"
edition = "2021"
rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [
	"devtools",
	"tray-icon",
	"config-json5",
] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-updater = "2.0.0-beta"
tauri-plugin-autostart = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"
# webbrowser = "0.8.10"
log = "0.4.17"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
