[package]
name = "idcard-generator"
version = "0.1.9"
description = "中国居民身份证生成器"
authors = [ "ddki" ]
license = ""
repository = "https://github.com/ddki/idcard-generator-tauri"
default-run = "idcard-generator"
edition = "2021"
rust-version = "1.73"

[build-dependencies.tauri-build]
version = "2.0.0-beta.17"
features = [ ]

[dependencies]
serde_json = "1.0"
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-updater = "2.0.0-beta.7"
tauri-plugin-autostart = "2.0.0-beta.7"
tauri-plugin-single-instance = "2.0.0-beta.9"
tauri-plugin-store = "2.0.0-beta.8"
tauri-plugin-notification = "2.0.0-beta.7"
log = "0.4.21"

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.tauri]
  version = "2.0.0-beta.22"
  features = [ "devtools", "tray-icon", "config-json5" ]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
